Serve frontend from Flask

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
     const attachBtn = document.getElementById('attach-btn');
     const toast = document.getElementById('toast');
 
-    const API_URL = "http://localhost:5000/chat";
+    const API_URL = "/chat";
 
     // Customizable Avatars
     const botIcon = "https://cdn-icons-png.flaticon.com/512/4712/4712035.png";
